little changes added for mobile

--- a/sass/my_theme/_servicesTheme.scss
+++ b/sass/my_theme/_servicesTheme.scss
@@ -60,7 +60,7 @@ body{
         }
         form {
             background: $headerBackground;
-            min-width: 400px; 
+            //min-width: 30%; 
             button {
                 background: $borderColor;   
             }
